_sass/scss/base/_blocks.scss
.entry {
	max-width: 45em;
	h1 {
		font-size: 1.4em;
		line-height: 1.2;
		font-weight: 300;
	}
	h3 {
		font-family: $font-secondary;
	}
	h4 {
		font-size: .8em;
	}
	p {
		text-indent: 0;
	}
	&.news {
		margin: 0 auto;
		padding: $pad/2 $pad*5;
		@media all and (max-width: $bp-med) {
			padding: $pad;
		}
	}
	&.story {
		color: $white;
		background: $color__fireside-red;
		border-radius: $border-radius;
		margin: 1em auto;
		overflow: hidden;
		figure, figure img {
			margin-bottom: -.5em;
			width: 100%;
		}
		div {
			padding: $pad*2;
		}
		a {
			color: $white;
		}
		h1 {
			font-size: 1.8em;
			line-height: 1.2;
			font-weight: 100;
		}
	}
}

.header-logo + .story {
	max-width: 100%;
	margin-top: -7em;
	div {
		max-width: 45em;
		margin: 0 auto;
	}
}

/* about us */
.about-us {
	margin: $space auto;
	max-width: 60em;
	@media all and (min-width: $bp-med) {
		display: flex;
	}
	h2 {
		margin-bottom: $space-half;
	}
	h3 {
		margin-bottom: $space-quarter;
	}
	section {
		margin-bottom: $space;
	}
	.back-to-top {
		text-align: right;
	}
}

.submissions-status {
	padding: $pad;
	margin: $space 0;
	background: $color__highlight;
	border-radius: $border-radius;
	color: $white;
	h1 {
		font-size: 1.8em;
		color: $white;
	}
	a {
		color: $white;
		text-decoration: underline;
	}
}

.book-header {
	margin-top: $space;
	@media all and (min-width: $bp-med) {
		display: flex;
		figure {
			max-width: 25em;
			margin-right: 1em;
		}
	}
}

.book-metadata ul {
	@media all and (min-width: $bp-med) {
		display: flex;
		flex-direction: column;
	}
	li {
		width: 100%;
	}
	a {
		color: $white;
	}
}

